# databricks_analysis

./: README.md
.github/workflows/: ci.yml  prod_deployment.yml
databrick_analytics/: README.md  databricks.yml  pyproject.toml
databrick_analytics/resources/: databricks_data_refresh.job.yml  franchise_analytics.job.yml
databrick_analytics/src/: customer_360.ipynb  transaction_summary.ipynb
databrick_analytics/src/databrick_analytics/: main.py  taxis.py
databrick_analytics/src/franchise_analytics/: franchise_analytics.ipynb
databrick_analytics/tests/: conftest.py  sample_taxis_test.py  test_taxis.py
